Kick out user feature, TODO fix shell termination
